# Dzukou-Pricing-2.0

./: .gitignore  BACKEND-COMPLETE.md  INTEGRATION_SUMMARY.md  OLLAMA_MIGRATION_COMPLETE.md  README-frontend.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
api/: Dzukou_Pricing_Overview_With_Names - Copy.csv  README.md  db.py  llm.py  main.py  matching.py  ml_matching.py  models.py  optimizer.py  pyproject.toml  schemas.py  scraping.py  seed_data.py  settings.py
api/tests/: conftest.py  test_scraping.py
app/: layout.tsx  page.tsx
app/competitive-analysis/: page.tsx
app/pricing-recommendations/: page.tsx
app/scraping/: page.tsx
components/: app-layout.tsx  implementation-summary.tsx  navigation.tsx  theme-provider.tsx  theme-toggle.tsx  ui-helpers.tsx
lib/: api.ts  hooks.ts
