[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.2",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.2.2",
    "tenacity>=8.5.0",
    "python-dateutil>=2.9.0.post0",
    "greenlet>=3.0.3",
    "aiosqlite>=0.20.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "ollama>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
